fixed x overflow

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@ body{
     padding: 0;
     font-family: 'Roboto', sans-serif;
     background: #f2f2f2;
-    overflow-x: hidden;
 
 }
 h1{
@@ -20,7 +19,7 @@ h1{
   flex-direction: column;
   align-items: center;
   min-height: 100dvh;
-  width: 100dvw;
+  max-width: 100dvw;
   padding: 0;
 }
 
